# irctc-tatkal-tui

./: .gitignore  README.md  config.example.json  pyproject.toml
src/irctc_tui/: __init__.py  __main__.py  alarm.py  app.py  app.tcss  automation.py  cli.py  config.py  events.py  notify.py  preflight.py  recon.py  results.py  search_cli.py  selectors.py  stations.py
tests/: test_alarm.py  test_cdp_attach.py  test_config.py  test_engine_fixture.py  test_notify.py  test_recon.py  test_results.py  test_search_cli.py  test_selectors.py  test_stations.py  test_tui.py
tests/fixtures/: irctc_results_mock.html  irctc_results_real.html  irctc_search_mock.html
